# distributed_services_auth

./: .env.example  .gitignore  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml
manifests/: auth-config.yml  auth-deploy.yml  auth-secret.example.yml  auth-service.yml
sql/: init.sql
src/: __main__.py  http_enums.py  server.py  service.py  settings.py  utils.py
